--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tinyxml (2.6.2-5deepin0) unstable; urgency=medium
+
+  * No source change upload against GCC 12.
+
+ -- Tianyu Chen <sweetyfish@deepin.org>  Fri, 20 Sep 2024 12:20:07 +0800
+
 tinyxml (2.6.2-5) unstable; urgency=medium
 
   [ Felix Geyer ]
